csv renderers refactoring